--- a/index.html
+++ b/index.html
@@ -3,121 +3,312 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VANE</title>
+  <title>VaneGoodenough</title>
+
+  <!-- =====================
+       WASTELAND THEME + MOTION
+       You can safely modify marked sections
+       ===================== -->
   <style>
     :root {
-      --bg: #0b0d10;
-      --fg: #e6e6eb;
-      --muted: #8a8f98;
-      --accent: #7f9cff;
+      --bg: #0a0a0a;
+      --panel: rgba(18, 18, 18, 0.82);
+      --border: rgba(255, 255, 255, 0.08);
+      --text: #e6e6e6;
+      --muted: #9a9a9a;
+      --accent: #d9b36c;
     }
+
     * { box-sizing: border-box; }
+
     body {
       margin: 0;
-      font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: radial-gradient(circle at 30% 20%, #151926, var(--bg));
-      color: var(--fg);
-      line-height: 1.6;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      color: var(--text);
+      background:
+        linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.9)),
+        url("background.jpg") center / cover no-repeat fixed;
+      /* ↑ Replace background.jpg to change background */
+      overflow-x: hidden;
     }
-    header {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding: 8vw;
-    }
-    h1 {
-      font-size: clamp(3rem, 8vw, 6rem);
-      margin: 0;
-      letter-spacing: -0.04em;
-    }
-    h1 span { color: var(--accent); }
-    p.lead {
-      max-width: 520px;
-      font-size: 1.1rem;
-      color: var(--muted);
-    }
-    nav {
+
+    /* =====================
+       SUBTLE WASTELAND MOTION
+       ===================== */
+    body::after {
+      content: "";
       position: fixed;
-      top: 24px;
-      right: 32px;
-      display: flex;
-      gap: 20px;
-      font-size: 0.9rem;
+      inset: 0;
+      pointer-events: none;
+      background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='2' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.04'/%3E%3C/svg%3E");
+      animation: noise 1.5s steps(2) infinite;
     }
-    nav a {
-      color: var(--muted);
-      text-decoration: none;
+
+    @keyframes noise {
+      0% { transform: translate(0,0); }
+      50% { transform: translate(-2%,2%); }
+      100% { transform: translate(0,0); }
     }
-    nav a:hover { color: var(--fg); }
-    section {
-      padding: 10vw 8vw;
-      max-width: 1200px;
-    }
-    .card {
-      background: rgba(255,255,255,0.03);
-      border: 1px solid rgba(255,255,255,0.06);
-      border-radius: 20px;
-      padding: 32px;
-      margin-bottom: 24px;
+
+    h1, h2 { font-weight: 600; letter-spacing: 0.04em; }
+
+    header {
+      padding: 48px 6vw 24px;
+      border-bottom: 1px solid var(--border);
+      background: rgba(0,0,0,0.6);
       backdrop-filter: blur(6px);
     }
-    footer {
-      padding: 60px 8vw;
-      color: var(--muted);
+
+    .title {
+      font-size: clamp(2.4rem, 5vw, 4rem);
+      margin: 0;
+    }
+
+    .subtitle { color: var(--muted); margin-top: 10px; max-width: 720px; }
+
+    .lang-switch {
+      margin-top: 14px;
       font-size: 0.85rem;
+      cursor: pointer;
+      opacity: 0.85;
+    }
+
+    main {
+      display: grid;
+      grid-template-columns: 220px 1fr;
+      gap: 24px;
+      padding: 40px 6vw;
+    }
+
+    nav {
+      background: var(--panel);
+      border: 1px solid var(--border);
+      border-radius: 14px;
+      padding: 16px;
+      height: fit-content;
+      animation: slideIn 0.6s ease;
+    }
+
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateX(-10px); }
+      to { opacity: 1; transform: translateX(0); }
+    }
+
+    .tab {
+      padding: 12px 14px;
+      margin-bottom: 6px;
+      border-radius: 10px;
+      cursor: pointer;
+      color: var(--muted);
+      transition: 0.2s;
+    }
+
+    .tab.active, .tab:hover {
+      background: rgba(255,255,255,0.05);
+      color: var(--text);
+    }
+
+    .panel {
+      background: var(--panel);
+      border: 1px solid var(--border);
+      border-radius: 18px;
+      padding: 32px;
+      min-height: 420px;
+      animation: fadeUp 0.5s ease;
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(8px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* =====================
+       SCROLLABLE CONTENT LIMIT
+       ===================== */
+    .section {
+      display: none;
+      max-height: 520px; /* CHANGE THIS to control display limit */
+      overflow-y: auto;
+      padding-right: 8px;
+    }
+
+    .section.active { display: block; }
+
+    .section::-webkit-scrollbar { width: 6px; }
+    .section::-webkit-scrollbar-thumb {
+      background: rgba(255,255,255,0.12);
+      border-radius: 6px;
+    }
+
+    .muted { color: var(--muted); }
+
+    /* =====================
+       MUSIC WORKS
+       ===================== */
+    .track {
+      border-bottom: 1px solid var(--border);
+      padding: 14px 0;
+    }
+
+    audio { width: 100%; margin-top: 8px; }
+
+    /* =====================
+       PHOTO GRID + AUTO ZOOM
+       ===================== */
+    .photos {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      gap: 12px;
+    }
+
+    .photos img {
+      width: 100%;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+
+    .photos img:hover { transform: scale(1.03); }
+
+    .lightbox {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.85);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+    }
+
+    .lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+    }
+
+    /* =====================
+       SOCIAL LINKS
+       ===================== */
+    .socials {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+      gap: 16px;
+      margin-top: 20px;
+    }
+
+    .social {
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      padding: 16px;
+      text-align: center;
+      background: rgba(255,255,255,0.03);
+    }
+
+    footer { padding: 40px 6vw; font-size: 0.8rem; color: var(--muted); }
+
+    @media (max-width: 900px) {
+      main { grid-template-columns: 1fr; }
     }
   </style>
 </head>
 <body>
+
+<header>
+  <h1 class="title">VaneGoodenough</h1>
+
+  <p class="subtitle lang en">A wasteland archive of sound, images, and traces.</p>
+  <p class="subtitle lang cn" style="display:none">一个存放声音、影像与痕迹的废土档案站。</p>
+
+  <div class="lang-switch" onclick="toggleLang()">EN / 中文</div>
+</header>
+
+<main>
   <nav>
-    <a href="#about">About</a>
-    <a href="#work">Work</a>
-    <a href="#contact">Contact</a>
+    <div class="tab active" onclick="openTab('works')">Works / 作品</div>
+    <div class="tab" onclick="openTab('photos')">Photos / 照片</div>
+    <div class="tab" onclick="openTab('updates')">Updates / 动态</div>
+    <div class="tab" onclick="openTab('contact')">Contact / 联系</div>
+    <div class="tab" onclick="openTab('socials')">Links / 平台</div>
   </nav>
 
-  <header>
-    <h1>VANE<span>.</span></h1>
-    <p class="lead">
-      A drifting mind, guided by no fixed direction.<br />
-      Designer · Writer · Observer
-    </p>
-  </header>
+  <div class="panel">
 
-  <section id="about">
-    <div class="card">
-      <h2>About</h2>
-      <p>
-        Vane is a personal space for fragmented thoughts, unfinished ideas,
-        and quiet creations. I’m interested in identity, narrative systems,
-        digital solitude, and things that don’t need to explain themselves.
-      </p>
+    <!-- MUSIC WORKS -->
+    <div id="works" class="section active">
+      <h2 class="lang en">Music Works</h2>
+      <h2 class="lang cn" style="display:none">音乐作品</h2>
+
+      <!-- COPY THIS BLOCK TO ADD A NEW TRACK -->
+      <div class="track">
+        <strong>Track Title</strong>
+        <p class="muted">Short description of the track.</p>
+        <!-- Replace src with your audio file URL -->
+        <audio controls src="music/example.mp3"></audio>
+      </div>
     </div>
-  </section>
 
-  <section id="work">
-    <div class="card">
-      <h2>Selected Work</h2>
-      <ul>
-        <li>Interactive narrative experiments</li>
-        <li>Character-driven writing</li>
-        <li>Minimal web & visual concepts</li>
-      </ul>
+    <!-- PHOTOS -->
+    <div id="photos" class="section">
+      <h2>Photos</h2>
+      <div class="photos">
+        <!-- Replace image paths -->
+        <img src="photos/1.jpg" onclick="zoom(this.src)" />
+        <img src="photos/2.jpg" onclick="zoom(this.src)" />
+      </div>
     </div>
-  </section>
 
-  <section id="contact">
-    <div class="card">
+    <!-- UPDATES -->
+    <div id="updates" class="section">
+      <h2>Updates</h2>
+      <p class="muted">Logs, notes, short thoughts.</p>
+    </div>
+
+    <!-- CONTACT -->
+    <div id="contact" class="section">
       <h2>Contact</h2>
-      <p>
-        You can reach me through the void, or more practically:
-      </p>
-      <p>Email: <em>your@email.com</em></p>
+      <p>Email: your@email.com</p>
     </div>
-  </section>
 
-  <footer>
-    © 2026 VANE — wayless, but intentional.
-  </footer>
+    <!-- SOCIAL -->
+    <div id="socials" class="section">
+      <h2>Platforms</h2>
+      <div class="socials">
+        <a class="social" href="https://instagram.com" target="_blank">Instagram</a>
+        <a class="social" href="https://twitter.com" target="_blank">Twitter / X</a>
+      </div>
+    </div>
+
+  </div>
+</main>
+
+<footer>
+  © 2026 VaneGoodenough · Wasteland Signal
+</footer>
+
+<!-- =====================
+     SCRIPT
+     ===================== -->
+<script>
+  function openTab(id) {
+    document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+    document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+    document.getElementById(id).classList.add('active');
+    event.target.classList.add('active');
+  }
+
+  function toggleLang() {
+    document.querySelectorAll('.lang.en').forEach(e => e.style.display = e.style.display === 'none' ? '' : 'none');
+    document.querySelectorAll('.lang.cn').forEach(e => e.style.display = e.style.display === 'none' ? '' : 'none');
+  }
+
+  function zoom(src) {
+    const box = document.createElement('div');
+    box.className = 'lightbox';
+    box.innerHTML = `<img src="${src}" />`;
+    box.onclick = () => box.remove();
+    document.body.appendChild(box);
+    box.style.display = 'flex';
+  }
+</script>
+
 </body>
 </html>
