--- a/index.html
+++ b/index.html
@@ -239,12 +239,20 @@
 
       <!-- COPY THIS BLOCK TO ADD A NEW TRACK -->
       <div class="track">
-        <strong>Track Title</strong>
-        <p class="muted">Short description of the track.</p>
+        <strong>Lee</strong>
+        <p class="Asong for a male character">Short description of the track.</p>
         <!-- Replace src with your audio file URL -->
-        <audio controls src="music/example.mp3"></audio>
+        <audio controls src="https://whyp.it/tracks/334120/lee?token=eAYJh"></audio>
       </div>
     </div>
+
+<div class="track">
+  <strong>Track Title</strong>
+  <p class="muted">描述 / Description</p>
+  <!-- 这里把 src 改成你得到的外链 -->
+  <audio controls src="https://.../audio123.mp3"></audio>
+</div>
+
 
     <!-- PHOTOS -->
     <div id="photos" class="section">
