--- a/index.html
+++ b/index.html
@@ -242,16 +242,9 @@
         <strong>Lee</strong>
         <p class="Asong for a male character">Short description of the track.</p>
         <!-- Replace src with your audio file URL -->
-        <audio controls src="https://whyp.it/tracks/334120/lee?token=eAYJh"></audio>
+        <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
       </div>
     </div>
-
-<div class="track">
-  <strong>Track Title</strong>
-  <p class="muted">描述 / Description</p>
-  <!-- 这里把 src 改成你得到的外链 -->
-  <audio controls src="https://.../audio123.mp3"></audio>
-</div>
 
 
     <!-- PHOTOS -->
