--- a/index.html
+++ b/index.html
@@ -240,7 +240,16 @@
       <!-- COPY THIS BLOCK TO ADD A NEW TRACK -->
       <div class="track">
         <strong>Lee</strong>
-        <p class="Asong for a male character">Short description of the track.</p>
+        <p class="muted">Asong for a male character.（2026/1/30）</p>
+        <!-- Replace src with your audio file URL -->
+        <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
+      </div>
+    </div>
+
+      <!-- COPY THIS BLOCK TO ADD A NEW TRACK -->
+      <div class="track">
+        <strong>Lee</strong>
+        <p class="muted">Asong for a male character.（2026/1/30）</p>
         <!-- Replace src with your audio file URL -->
         <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
       </div>
