--- a/index.html
+++ b/index.html
@@ -246,7 +246,6 @@
       </div>
     </div>
 
-      <!-- COPY THIS BLOCK TO ADD A NEW TRACK -->
       <div class="track">
         <strong>Lee</strong>
         <p class="muted">Asong for a male character.（2026/1/30）</p>
@@ -255,14 +254,33 @@
       </div>
     </div>
 
+      <div class="track">
+        <strong>Lee</strong>
+        <p class="muted">Asong for a male character.（2026/1/30）</p>
+        <!-- Replace src with your audio file URL -->
+        <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
+      </div>
+    </div>
 
     <!-- PHOTOS -->
     <div id="photos" class="section">
       <h2>Photos</h2>
       <div class="photos">
         <!-- Replace image paths -->
-        <img src="photos/1.jpg" onclick="zoom(this.src)" />
-        <img src="photos/2.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
+        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
       </div>
     </div>
 
