--- a/index.html
+++ b/index.html
@@ -232,35 +232,33 @@
 
   <div class="panel">
 
-    <!-- MUSIC WORKS -->
-    <div id="works" class="section active">
-      <h2 class="lang en">Music Works</h2>
-      <h2 class="lang cn" style="display:none">音乐作品</h2>
+<!-- MUSIC WORKS -->
+<div id="works" class="section active">
+  <h2 class="lang en">Music Works</h2>
+  <h2 class="lang cn" style="display:none">音乐作品</h2>
 
-      <!-- COPY THIS BLOCK TO ADD A NEW TRACK -->
-      <div class="track">
-        <strong>Lee</strong>
-        <p class="muted">Asong for a male character.（2026/1/30）</p>
-        <!-- Replace src with your audio file URL -->
-        <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
-      </div>
-    </div>
+  <!-- TRACK 1 -->
+  <div class="track">
+    <strong>Lee</strong>
+    <p class="muted">A song for a male character.（2026/1/30）</p>
+    <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
+  </div>
 
-      <div class="track">
-        <strong>Lee</strong>
-        <p class="muted">Asong for a male character.（2026/1/30）</p>
-        <!-- Replace src with your audio file URL -->
-        <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
-      </div>
-    </div>
+  <!-- TRACK 2 -->
+  <div class="track">
+    <strong>Lee</strong>
+    <p class="muted">A song for a male character.（2026/1/30）</p>
+    <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
+  </div>
 
-      <div class="track">
-        <strong>Lee</strong>
-        <p class="muted">Asong for a male character.（2026/1/30）</p>
-        <!-- Replace src with your audio file URL -->
-        <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
-      </div>
-    </div>
+  <!-- TRACK 3 -->
+  <div class="track">
+    <strong>Lee</strong>
+    <p class="muted">A song for a male character.（2026/1/30）</p>
+    <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
+  </div>
+</div>
+
 
     <!-- PHOTOS -->
     <div id="photos" class="section">
