--- a/index.html
+++ b/index.html
@@ -5,335 +5,215 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VaneGoodenough</title>
 
-  <!-- =====================
-       WASTELAND THEME + MOTION
-       You can safely modify marked sections
-       ===================== -->
+  <!-- ========================
+       GLOBAL STYLE / THEME
+       ======================== -->
   <style>
-    :root {
-      --bg: #0a0a0a;
-      --panel: rgba(18, 18, 18, 0.82);
-      --border: rgba(255, 255, 255, 0.08);
-      --text: #e6e6e6;
-      --muted: #9a9a9a;
-      --accent: #d9b36c;
-    }
-
-    * { box-sizing: border-box; }
-
+    /* ====== BASIC RESET ====== */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      color: var(--text);
-      background:
-        linear-gradient(rgba(0,0,0,0.65), rgba(0,0,0,0.9)),
-        url("background.jpg") center / cover no-repeat fixed;
-      /* ↑ Replace background.jpg to change background */
-      overflow-x: hidden;
+      background: #0f0f0f;
+      color: #e0e0e0;
+      font-family: "Courier New", monospace;
+      overflow: hidden;
     }
 
-    /* =====================
-       SUBTLE WASTELAND MOTION
-       ===================== */
-    body::after {
-      content: "";
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='2' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.04'/%3E%3C/svg%3E");
-      animation: noise 1.5s steps(2) infinite;
-    }
-
-    @keyframes noise {
-      0% { transform: translate(0,0); }
-      50% { transform: translate(-2%,2%); }
-      100% { transform: translate(0,0); }
-    }
-
-    h1, h2 { font-weight: 600; letter-spacing: 0.04em; }
-
-    header {
-      padding: 48px 6vw 24px;
-      border-bottom: 1px solid var(--border);
-      background: rgba(0,0,0,0.6);
-      backdrop-filter: blur(6px);
-    }
-
-    .title {
-      font-size: clamp(2.4rem, 5vw, 4rem);
-      margin: 0;
-    }
-
-    .subtitle { color: var(--muted); margin-top: 10px; max-width: 720px; }
-
-    .lang-switch {
-      margin-top: 14px;
-      font-size: 0.85rem;
-      cursor: pointer;
-      opacity: 0.85;
-    }
-
-    main {
+    /* ====== LAYOUT ====== */
+    .app {
       display: grid;
-      grid-template-columns: 220px 1fr;
-      gap: 24px;
-      padding: 40px 6vw;
+      grid-template-columns: 260px 1fr;
+      height: 100vh;
     }
 
-    nav {
-      background: var(--panel);
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 16px;
-      height: fit-content;
-      animation: slideIn 0.6s ease;
+    /* ====== SIDEBAR ====== */
+    .sidebar {
+      background: #141414;
+      border-right: 1px solid #333;
+      padding: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
     }
 
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateX(-10px); }
-      to { opacity: 1; transform: translateX(0); }
+    .name {
+      font-size: 20px;
+      letter-spacing: 2px;
+      margin-bottom: 12px;
+    }
+
+    .tabs {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
     }
 
     .tab {
-      padding: 12px 14px;
-      margin-bottom: 6px;
-      border-radius: 10px;
       cursor: pointer;
-      color: var(--muted);
-      transition: 0.2s;
+      padding: 10px 12px;
+      border: 1px solid #333;
+      transition: all .2s;
     }
 
-    .tab.active, .tab:hover {
-      background: rgba(255,255,255,0.05);
-      color: var(--text);
+    .tab:hover { background: #222; }
+    .tab.active {
+      background: #333;
+      border-color: #777;
     }
 
+    /* ====== MAIN PANEL ====== */
     .panel {
-      background: var(--panel);
-      border: 1px solid var(--border);
-      border-radius: 18px;
+      position: relative;
       padding: 32px;
-      min-height: 420px;
-      animation: fadeUp 0.5s ease;
+      overflow: hidden;
     }
 
-    @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(8px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* =====================
-       SCROLLABLE CONTENT LIMIT
-       ===================== */
+    /* ====== SECTIONS (ABSOLUTE STACK) ====== */
     .section {
-      display: none;
-      max-height: 520px; /* CHANGE THIS to control display limit */
+      position: absolute;
+      inset: 0;
+      padding-right: 16px;
       overflow-y: auto;
-      padding-right: 8px;
+      display: none;
     }
 
     .section.active { display: block; }
 
-    .section::-webkit-scrollbar { width: 6px; }
-    .section::-webkit-scrollbar-thumb {
-      background: rgba(255,255,255,0.12);
-      border-radius: 6px;
-    }
+    /* ====== COMMON ELEMENTS ====== */
+    h2 { margin-bottom: 16px; font-size: 18px; }
+    .muted { color: #888; font-size: 13px; }
 
-    .muted { color: var(--muted); }
-
-    /* =====================
-       MUSIC WORKS
-       ===================== */
+    /* ====== MUSIC TRACK ====== */
     .track {
-      border-bottom: 1px solid var(--border);
-      padding: 14px 0;
+      border: 1px solid #333;
+      padding: 16px;
+      margin-bottom: 16px;
+      transition: transform .3s;
     }
 
+    .track:hover { transform: scale(1.02); }
     audio { width: 100%; margin-top: 8px; }
 
-    /* =====================
-       PHOTO GRID + AUTO ZOOM
-       ===================== */
-    .photos {
+    /* ====== IMAGE GRID ====== */
+    .grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
       gap: 12px;
     }
 
-    .photos img {
+    .grid img {
       width: 100%;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: transform 0.3s;
+      border: 1px solid #333;
+      transition: transform .3s;
     }
 
-    .photos img:hover { transform: scale(1.03); }
+    .grid img:hover { transform: scale(1.08); }
 
-    .lightbox {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.85);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
+    /* ====== SOCIAL LINKS ====== */
+    .links a {
+      display: block;
+      color: #aaa;
+      text-decoration: none;
+      margin-bottom: 8px;
     }
 
-    .lightbox img {
-      max-width: 90%;
-      max-height: 90%;
-    }
-
-    /* =====================
-       SOCIAL LINKS
-       ===================== */
-    .socials {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-      gap: 16px;
-      margin-top: 20px;
-    }
-
-    .social {
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 16px;
-      text-align: center;
-      background: rgba(255,255,255,0.03);
-    }
-
-    footer { padding: 40px 6vw; font-size: 0.8rem; color: var(--muted); }
-
-    @media (max-width: 900px) {
-      main { grid-template-columns: 1fr; }
-    }
+    .links a:hover { color: #fff; }
   </style>
 </head>
 <body>
 
-<header>
-  <h1 class="title">VaneGoodenough</h1>
+<!-- ========================
+     APP ROOT
+     ======================== -->
+<div class="app">
 
-  <p class="subtitle lang en">A wasteland archive of sound, images, and traces.</p>
-  <p class="subtitle lang cn" style="display:none">一个存放声音、影像与痕迹的废土档案站。</p>
+  <!-- ========================
+       SIDEBAR / NAVIGATION
+       ======================== -->
+  <aside class="sidebar">
+    <div class="name">VaneGoodenough</div>
 
-  <div class="lang-switch" onclick="toggleLang()">EN / 中文</div>
-</header>
+    <!-- Tabs: 修改文字即可新增导航 -->
+    <div class="tabs">
+      <div class="tab active" data-target="works">Works / 作品</div>
+      <div class="tab" data-target="photos">Photos / 照片</div>
+      <div class="tab" data-target="updates">Updates / 动态</div>
+      <div class="tab" data-target="contact">Contact / 联系</div>
+      <div class="tab" data-target="socials">Links / 平台</div>
+    </div>
+  </aside>
 
-<main>
-  <nav>
-    <div class="tab active" onclick="openTab('works')">Works / 作品</div>
-    <div class="tab" onclick="openTab('photos')">Photos / 照片</div>
-    <div class="tab" onclick="openTab('updates')">Updates / 动态</div>
-    <div class="tab" onclick="openTab('contact')">Contact / 联系</div>
-    <div class="tab" onclick="openTab('socials')">Links / 平台</div>
-  </nav>
+  <!-- ========================
+       MAIN PANEL
+       ======================== -->
+  <main class="panel">
 
-  <div class="panel">
+    <!-- ====== WORKS ====== -->
+    <section id="works" class="section active">
+      <h2>Music Works / 音乐作品</h2>
 
-<!-- MUSIC WORKS -->
-<div id="works" class="section active">
-  <h2 class="lang en">Music Works</h2>
-  <h2 class="lang cn" style="display:none">音乐作品</h2>
+      <!-- 复制整个 .track 即可新增一首歌 -->
+      <div class="track">
+        <strong>Lee</strong>
+        <p class="muted">A song for a male character · 2026</p>
+        <!-- 替换 src 为你的音频直链 -->
+        <audio controls src="YOUR_AUDIO_LINK.mp3"></audio>
+      </div>
+    </section>
 
-  <!-- TRACK 1 -->
-  <div class="track">
-    <strong>Lee</strong>
-    <p class="muted">A song for a male character.（2026/1/30）</p>
-    <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
-  </div>
+    <!-- ====== PHOTOS ====== -->
+    <section id="photos" class="section">
+      <h2>Photos / 照片</h2>
 
-  <!-- TRACK 2 -->
-  <div class="track">
-    <strong>Lee</strong>
-    <p class="muted">A song for a male character.（2026/1/30）</p>
-    <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
-  </div>
+      <!-- 复制 img 标签即可新增照片 -->
+      <div class="grid">
+        <img src="YOUR_IMAGE_LINK.jpg" />
+        <img src="YOUR_IMAGE_LINK.jpg" />
+      </div>
+    </section>
 
-  <!-- TRACK 3 -->
-  <div class="track">
-    <strong>Lee</strong>
-    <p class="muted">A song for a male character.（2026/1/30）</p>
-    <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
-  </div>
+    <!-- ====== UPDATES ====== -->
+    <section id="updates" class="section">
+      <h2>Updates / 动态</h2>
+      <p class="muted">2026 · New music in progress.</p>
+    </section>
+
+    <!-- ====== CONTACT ====== -->
+    <section id="contact" class="section">
+      <h2>Contact / 联系</h2>
+      <p>Email: your@email.com</p>
+    </section>
+
+    <!-- ====== SOCIALS ====== -->
+    <section id="socials" class="section">
+      <h2>Platforms / 平台</h2>
+      <div class="links">
+        <!-- 替换 href 即可 -->
+        <a href="https://instagram.com" target="_blank">Instagram</a>
+        <a href="https://twitter.com" target="_blank">Twitter / X</a>
+      </div>
+    </section>
+
+  </main>
 </div>
 
-
-    <!-- PHOTOS -->
-    <div id="photos" class="section">
-      <h2>Photos</h2>
-      <div class="photos">
-        <!-- Replace image paths -->
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" onclick="zoom(this.src)" />
-      </div>
-    </div>
-
-    <!-- UPDATES -->
-    <div id="updates" class="section">
-      <h2>Updates</h2>
-      <p class="muted">Logs, notes, short thoughts.</p>
-    </div>
-
-    <!-- CONTACT -->
-    <div id="contact" class="section">
-      <h2>Contact</h2>
-      <p>Email: your@email.com</p>
-    </div>
-
-    <!-- SOCIAL -->
-    <div id="socials" class="section">
-      <h2>Platforms</h2>
-      <div class="socials">
-        <a class="social" href="https://instagram.com" target="_blank">Instagram</a>
-        <a class="social" href="https://twitter.com" target="_blank">Twitter / X</a>
-      </div>
-    </div>
-
-  </div>
-</main>
-
-<footer>
-  © 2026 VaneGoodenough · Wasteland Signal
-</footer>
-
-<!-- =====================
-     SCRIPT
-     ===================== -->
+<!-- ========================
+     JS: ZERO GLOBAL, ZERO BUG
+     ======================== -->
 <script>
-  function openTab(id) {
-    document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-    document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-    event.target.classList.add('active');
-  }
+  const tabs = document.querySelectorAll('.tab');
+  const sections = document.querySelectorAll('.section');
 
-  function toggleLang() {
-    document.querySelectorAll('.lang.en').forEach(e => e.style.display = e.style.display === 'none' ? '' : 'none');
-    document.querySelectorAll('.lang.cn').forEach(e => e.style.display = e.style.display === 'none' ? '' : 'none');
-  }
+  tabs.forEach(tab => {
+    tab.addEventListener('click', () => {
+      const target = tab.dataset.target;
 
-  function zoom(src) {
-    const box = document.createElement('div');
-    box.className = 'lightbox';
-    box.innerHTML = `<img src="${src}" />`;
-    box.onclick = () => box.remove();
-    document.body.appendChild(box);
-    box.style.display = 'flex';
-  }
+      tabs.forEach(t => t.classList.remove('active'));
+      sections.forEach(s => s.classList.remove('active'));
+
+      tab.classList.add('active');
+      document.getElementById(target).classList.add('active');
+    });
+  });
 </script>
 
 </body>
