--- a/index.html
+++ b/index.html
@@ -1,257 +1,258 @@
+<!-- 完整稳定版：废土 RPG 风格个人网站 | VaneGoodenough -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VaneGoodenough</title>
 
-  <!-- =====================
-       STABLE RPG / WASTELAND UI
-       完整可直接使用版本
-       ===================== -->
+  <!-- ========== 核心样式 ========== -->
   <style>
+    /* ===== 可快速调整的主题变量 ===== */
     :root {
-      --bg: #0b0d10;
-      --panel: rgba(18, 21, 26, 0.68);
-      --border: rgba(138,255,193,0.25);
-      --accent: #8affc1;
-      --text: #e6f1ea;
-      --muted: #9fb8ad;
+      --ui-bg: rgba(20, 22, 24, 0.68);   /* UI 背景透明度 ↑ 数值越小越透明 */
+      --panel-bg: rgba(30, 34, 38, 0.72);
+      --border-color: #6b7a78;
+      --accent: #9fd3c7;
+      --text-main: #e6f1ee;
+      --text-dim: #a9b7b5;
     }
 
+    /* ===== 全局 ===== */
     * { box-sizing: border-box; }
 
-body {
-  margin: 0;
-  height: 100vh;
-  font-family: Inter, system-ui, -apple-system, Segoe UI, sans-serif;
-  color: var(--text);
+    body {
+      margin: 0;
+      font-family: "Segoe UI", "Inter", system-ui, sans-serif;
+      color: var(--text-main);
+      background:
+        linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.6)),
+        url("https://pic1.imgdb.cn/item/697cabdaad9f5f6883e2e397.jpg") center / cover no-repeat fixed; /* ← 在这里换背景图 */
+      min-height: 100vh;
+    }
 
-  /* ↓↓↓ 在这里换你的背景图 ↓↓↓ */
-  background:
-    linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
-    url("https://pic1.imgdb.cn/item/697cabdaad9f5f6883e2e397.jpg") center / cover no-repeat fixed;
-
-  overflow: hidden;
-}
-
-
-    /* === MAIN LAYOUT === */
-    .main {
+    /* ===== 页面布局 ===== */
+    .layout {
       display: grid;
       grid-template-columns: 260px 1fr;
-      height: 100vh;
-      gap: 16px;
-      padding: 20px;
+      min-height: 100vh;
     }
 
-    /* === SIDEBAR === */
+    /* ===== 左侧 RPG UI 栏 ===== */
     .sidebar {
-      background: var(--panel);
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 18px;
+      background: var(--ui-bg);
+      border-right: 1px solid var(--border-color);
+      padding: 20px 16px;
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 18px;
+      backdrop-filter: blur(6px);
     }
 
-    .sidebar h1 {
-      margin: 0 0 10px;
-      font-size: 22px;
+    .logo {
+      font-size: 20px;
+      font-weight: 700;
       letter-spacing: 1px;
       text-transform: uppercase;
-      border-bottom: 1px dashed var(--border);
-      padding-bottom: 10px;
+      color: var(--accent);
+      margin-bottom: 6px;
     }
 
-    .tab {
-      padding: 10px 14px;
-      border-radius: 10px;
+    .subtitle {
+      font-size: 12px;
+      color: var(--text-dim);
+      margin-bottom: 12px;
+    }
+
+    .menu {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      flex-grow: 1;
+    }
+
+    .menu button {
+      background: var(--panel-bg);
+      color: var(--text-main);
+      border: 1px solid var(--border-color);
+      padding: 10px 12px;
+      text-align: left;
       cursor: pointer;
-      font-size: 14px;
-      color: var(--muted);
-      transition: 0.2s;
+      transition: all 0.2s ease;
     }
 
-    .tab:hover {
-      color: var(--accent);
-      background: rgba(138,255,193,0.08);
+    .menu button:hover,
+    .menu button.active {
+      background: rgba(80, 110, 120, 0.45);
+      border-color: var(--accent);
     }
 
-    .tab.active {
-      color: var(--accent);
-      border: 1px solid var(--accent);
-      background: rgba(138,255,193,0.12);
-      box-shadow: inset 0 0 12px rgba(138,255,193,0.2);
+    /* ===== 社交平台区（图片 + 链接） ===== */
+    .social {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 10px;
     }
 
-    /* === PANEL === */
-    .panel {
-      background: var(--panel);
-      border: 1px solid var(--border);
-      border-radius: 16px;
+    .social a {
+      display: block;
+      background: var(--panel-bg);
+      border: 1px solid var(--border-color);
+      padding: 8px;
+      transition: all 0.2s ease;
+    }
+
+    .social a:hover {
+      border-color: var(--accent);
+      transform: scale(1.05);
+    }
+
+    .social img {
+      width: 100%;
+      height: 40px;
+      object-fit: contain;
+    }
+
+    /* ===== 主内容区 ===== */
+    .content {
       padding: 26px 30px;
       overflow: hidden;
-      position: relative;
     }
 
-    .panel::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: repeating-linear-gradient(
-        0deg,
-        rgba(255,255,255,0.025),
-        rgba(255,255,255,0.025) 1px,
-        transparent 1px,
-        transparent 3px
-      );
-      pointer-events: none;
+    .panel {
+      background: var(--panel-bg);
+      border: 1px solid var(--border-color);
+      padding: 20px;
+      height: calc(100vh - 52px);
+      overflow-y: auto; /* 超出内容滚动 */
+      backdrop-filter: blur(6px);
+      animation: fadeIn 0.5s ease;
     }
 
-    /* === SECTIONS === */
-    .section {
-      display: none;
-      height: 100%;
-      overflow-y: auto;
-      padding-right: 10px;
-    }
-
-    .section.active {
-      display: block;
-    }
-
-    .section h2 {
+    .panel h2 {
       margin-top: 0;
-      font-size: 20px;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      border-bottom: 1px solid var(--border);
-      padding-bottom: 8px;
-    }
-
-    .section::-webkit-scrollbar { width: 6px; }
-    .section::-webkit-scrollbar-thumb {
-      background: rgba(255,255,255,0.15);
-      border-radius: 6px;
-    }
-
-    /* === MUSIC === */
-    .track {
-      display: grid;
-      grid-template-columns: 1fr auto;
-      gap: 14px;
-      align-items: center;
+      font-size: 18px;
+      border-bottom: 1px solid var(--border-color);
+      padding-bottom: 6px;
       margin-bottom: 14px;
-      padding: 12px 14px;
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      background: rgba(255,255,255,0.03);
     }
 
-    .track span {
-      font-size: 14px;
+    /* ===== 作品（音频） ===== */
+    .track {
+      margin-bottom: 16px;
+      padding-bottom: 12px;
+      border-bottom: 1px dashed var(--border-color);
     }
 
-    audio { width: 220px; }
-
-    /* === PHOTOS === */
-    .photos {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-      gap: 14px;
-    }
-
-    .photos img {
+    audio {
       width: 100%;
-      border-radius: 12px;
-      border: 1px solid var(--border);
-      transition: 0.3s;
-      cursor: pointer;
+      margin-top: 6px;
     }
 
-    .photos img:hover {
-      transform: scale(1.06);
-      box-shadow: 0 0 18px rgba(138,255,193,0.35);
+    /* ===== 动画 ===== */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(6px); }
+      to { opacity: 1; transform: none; }
     }
 
-    /* === MOBILE === */
+    /* ===== 响应式 ===== */
     @media (max-width: 900px) {
-      .main {
+      .layout {
         grid-template-columns: 1fr;
+      }
+      .sidebar {
+        flex-direction: row;
+        flex-wrap: wrap;
+      }
+      .menu {
+        flex-direction: row;
+        flex-wrap: wrap;
       }
     }
   </style>
 </head>
+
 <body>
+  <div class="layout">
 
-<div class="main">
-
-  <!-- SIDEBAR -->
-  <div class="sidebar">
-    <h1>Vane</h1>
-    <div class="tab active" onclick="openTab(this,'works')">Works / 作品</div>
-    <div class="tab" onclick="openTab(this,'photos')">Photos / 照片</div>
-    <div class="tab" onclick="openTab(this,'updates')">Updates / 动态</div>
-    <div class="tab" onclick="openTab(this,'contact')">Contact / 联系</div>
-    <div class="tab" onclick="openTab(this,'socials')">Links / 平台</div>
-  </div>
-
-  <!-- PANEL -->
-  <div class="panel">
-
-    <!-- WORKS -->
-    <div id="works" class="section active">
-      <h2>Music Works</h2>
-
-      <!-- 复制这一整块来新增歌曲 -->
-      <div class="track">
-        <span>Lee — A song for a male character (2026)</span>
-        <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
+    <!-- ===== 左侧 RPG UI ===== -->
+    <aside class="sidebar">
+      <div>
+        <div class="logo">VaneGoodenough</div>
+        <div class="subtitle">废土 · 音乐 · 数字人格</div>
       </div>
 
-    </div>
-
-    <!-- PHOTOS -->
-    <div id="photos" class="section">
-      <h2>Photos</h2>
-      <div class="photos">
-        <!-- 替换 src 即可换照片 -->
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" />
-        <img src="https://pic1.imgdb.cn/item/697ca48bad9f5f6883e2bcf8.jpg" />
+      <div class="menu">
+        <button class="active" onclick="switchTab('works')">我的作品</button>
+        <button onclick="switchTab('photos')">我的照片</button>
+        <button onclick="switchTab('updates')">我的动态</button>
+        <button onclick="switchTab('contact')">联系方式</button>
       </div>
-    </div>
 
-    <!-- UPDATES -->
-    <div id="updates" class="section">
-      <h2>Updates</h2>
-      <p>Logs, notes, signals.</p>
-    </div>
+      <!-- 社交平台（点击可用） -->
+      <div class="social">
+        <!-- ↓↓↓ 在 href 里换成你的链接，在 src 里换图标 ↓↓↓ -->
+        <a href="https://instagram.com" target="_blank">
+          <img src="icons/instagram.png" alt="Instagram" />
+        </a>
+        <a href="https://twitter.com" target="_blank">
+          <img src="icons/twitter.png" alt="Twitter" />
+        </a>
+        <a href="https://github.com" target="_blank">
+          <img src="icons/github.png" alt="GitHub" />
+        </a>
+      </div>
+    </aside>
 
-    <!-- CONTACT -->
-    <div id="contact" class="section">
-      <h2>Contact</h2>
-      <p>Email: your@email.com</p>
-    </div>
+    <!-- ===== 主内容 ===== -->
+    <main class="content">
 
-    <!-- SOCIALS -->
-    <div id="socials" class="section">
-      <h2>Platforms</h2>
-      <p>Instagram / Twitter / Others</p>
-    </div>
+      <!-- 我的作品 -->
+      <section id="works" class="panel">
+        <h2>我的作品 / Works</h2>
 
+        <!-- ↓↓↓ 每一首歌一个 block，audio src 换成你的外链或本地文件 ↓↓↓ -->
+        <div class="track">
+          <strong>Track 01 – Wasteland Signal</strong>
+          <audio controls src="audio/track1.mp3"></audio>
+        </div>
+
+        <div class="track">
+          <strong>Track 02 – Static Dream</strong>
+          <audio controls src="audio/track2.mp3"></audio>
+        </div>
+      </section>
+
+      <!-- 我的照片 -->
+      <section id="photos" class="panel" style="display:none">
+        <h2>我的照片 / Photos</h2>
+        <p>在这里放你的图片画廊。</p>
+      </section>
+
+      <!-- 我的动态 -->
+      <section id="updates" class="panel" style="display:none">
+        <h2>我的动态 / Updates</h2>
+        <p>文字、日志、状态更新。</p>
+      </section>
+
+      <!-- 联系方式 -->
+      <section id="contact" class="panel" style="display:none">
+        <h2>联系方式 / Contact</h2>
+        <p>Email: yourname@email.com</p>
+      </section>
+
+    </main>
   </div>
-</div>
 
-<script>
-  function openTab(el, id) {
-    document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-    document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-    el.classList.add('active');
-    document.getElementById(id).classList.add('active');
-  }
-</script>
+  <!-- ===== 交互逻辑 ===== -->
+  <script>
+    function switchTab(id) {
+      document.querySelectorAll('.panel').forEach(p => p.style.display = 'none');
+      document.getElementById(id).style.display = 'block';
 
+      document.querySelectorAll('.menu button').forEach(b => b.classList.remove('active'));
+      event.target.classList.add('active');
+    }
+  </script>
 </body>
 </html>
