--- a/index.html
+++ b/index.html
@@ -232,13 +232,15 @@
       <!-- 我的动态 -->
       <section id="updates" class="panel" style="display:none">
         <h2>我的动态 / Updates</h2>
-        <p>文字、日志、状态更新。</p>
+        <p>I'm a creator currently focusing heavily on music production. I also enjoy fitness, and once I’m in good enough shape, I plan to start sharing more of my life. You can click the icon in the lower-left corner to visit my platforms. I look forward to your follow and subscription—every new friend truly means a lot to me.</p>
+        <p>我是一个自由职业者，现在非常喜欢把工作放在音乐制作上，同时我喜欢健身，等我身材变得足够好之后我想我会开始分享我的生活，你可以在左下角点击图标跳转至我的各个平台，期待您的关注和订阅，每一个新朋友对我来说都意义重大！</p>
       </section>
 
       <!-- 联系方式 -->
       <section id="contact" class="panel" style="display:none">
         <h2>联系方式 / Contact</h2>
-        <p>Email: yourname@email.com</p>
+        <p>Email: 1131511423@qq.com</p>
+        <p>Email: qq1131511423@gmail.com</p>
       </section>
 
     </main>
