--- a/index.html
+++ b/index.html
@@ -190,18 +190,27 @@
       </div>
 
       <!-- 社交平台（点击可用） -->
-      <div class="social">
-        <!-- ↓↓↓ 在 href 里换成你的链接，在 src 里换图标 ↓↓↓ -->
-        <a href="https://instagram.com" target="_blank">
-          <img src="icons/instagram.png" alt="Instagram" />
-        </a>
-        <a href="https://twitter.com" target="_blank">
-          <img src="icons/twitter.png" alt="Twitter" />
-        </a>
-        <a href="https://github.com" target="_blank">
-          <img src="icons/github.png" alt="GitHub" />
-        </a>
-      </div>
+<div class="hud-icons">
+  <a href="https://www.instagram.com/v1engoodenough?igsh=dDBwamU4N3AwMGls" target="_blank">
+    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
+  </a>
+  <a href="https://twitter.com/xxx" target="_blank">
+    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
+  </a>
+  <a href="https://github.com/xxx" target="_blank">
+    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
+  </a>
+  <a href="https://soundcloud.com/xxx" target="_blank">
+    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
+  </a>
+  <a href="https://youtube.com/xxx" target="_blank">
+    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
+  </a>
+  <a href="https://bandcamp.com/xxx" target="_blank">
+    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
+  </a>
+</div>
+
     </aside>
 
     <!-- ===== 主内容 ===== -->
