--- a/index.html
+++ b/index.html
@@ -237,14 +237,8 @@
   <a href="https://discord.gg/Qy44zM8v" target="_blank">
     <img src="https://pic1.imgdb.cn/item/697cc2c6ad9f5f6883e347fe.png">
   </a>
-  <a href="https://soundcloud.com/xxx" target="_blank">
-    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
-  </a>
-  <a href="https://youtube.com/xxx" target="_blank">
-    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
-  </a>
-  <a href="https://bandcamp.com/xxx" target="_blank">
-    <img src="https://pic1.imgdb.cn/item/697cba0d1af8234bd07d65f5.png">
+  <a href="https://www.youtube.com/channel/UCNztPSqgp99zC_ap7cbJLFA">
+    <img src="https://pic1.imgdb.cn/item/697ccd58ad9f5f6883e391c6.png">
   </a>
 </div>
 
